--- a/public/index.html
+++ b/public/index.html
@@ -8,16 +8,6 @@
 	<p>Welcome to the chat app1</p>
 
 	<script src="/socket.io/socket.io.js" type="text/javascript"></script>
-	<script type="text/javascript">
-		var socket = io();
-
-		socket.on('connect', () => {
-			console.log('Connected to server');
-		});
-
-		socket.on('disconnect',()=> {
-			console.log('Disconnected to server');
-		});
-	</script>
+	<script src="./js/index.js" type="text/javascript"></script>
 </body>
 </html>
