--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
 	<p>Welcome to the chat app1</p>
 
 	<script src="/socket.io/socket.io.js" type="text/javascript"></script>
-	<script src="./js/index.js" type="text/javascript"></script>
+	<script src="/js/index.js" type="text/javascript"></script>
 </body>
 </html>
