--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,15 @@
 <body>
 	<p>Welcome to the chat app1</p>
 
+	<ol id="messages"></ol>
+
+	<form id="message-form">
+		<input type="text" name="message" placeholder="Message" />
+		<button>Send</button>
+	</form>
+
 	<script src="/socket.io/socket.io.js" type="text/javascript"></script>
+	<script type="text/javascript" src="/js/libs/jquery-3.3.1.min.js"></script>
 	<script src="/js/index.js" type="text/javascript"></script>
 </body>
 </html>
