--- a/public/index.html
+++ b/public/index.html
@@ -3,18 +3,26 @@
 <head>
 	<meta charset="utf-8">
 	<title></title>
+	<link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
-<body>
-	<p>Welcome to the chat app1</p>
+<body class='chat'>
+	<div class='chat__sidebar'>
+		<h3>Avinash Chat Room</h3>
+		<div id='users'></div>
+	</div>
+	<div class='chat__main'>
+		<ol id="messages" class='chat__messages'></ol>
+		<p id='location'></p>
 
-	<ol id="messages"></ol>
-	<p id='location'></p>
-
-	<form id="message-form">
-		<input type="text" name="message" placeholder="Message" />
-		<button>Send</button>
-	</form>
-	<button id="send-location">Send location</button>
+		<div class='chat__footer'>
+			<form id="message-form">
+				<input type="text" name="message" placeholder="Message" autofocus autocomplete="off" />
+				<button>Send</button>
+			</form>
+			<button id="send-location">Send location</button>
+		</div>
+	</div>
+	
 	<script src="/socket.io/socket.io.js" type="text/javascript"></script>
 	<script type="text/javascript" src="/js/libs/jquery-3.3.1.min.js"></script>
 	<script src="/js/index.js" type="text/javascript"></script>
