--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
 	
 	<script src="/socket.io/socket.io.js" type="text/javascript"></script>
 	<script type="text/javascript" src="/js/libs/jquery-3.3.1.min.js"></script>
+	<script type="text/javascript" src="/js/libs/moment.js"></script>
 	<script src="/js/index.js" type="text/javascript"></script>
 </body>
 </html>
