--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,35 @@
 			<button id="send-location">Send location</button>
 		</div>
 	</div>
+	<script type="text/template" id="message-template">
+		<li class='message'>
+			<div class='message__title'>
+				<h4>{{from}}</h4>
+				<span>{{createdAt}}</span>
+			</div>
+			<div class='message__body'>
+				<p>{{text}}</p>
+			</div>
+		</li>
+	</script>
+	<script type="text/template" id="location-message-template">
+		<li class='message'>
+			<div class='message__title'>
+				<h4>{{from}}</h4>
+				<span>{{createdAt}}</span>
+			</div>
+			<div class='message__body'>
+				<p>
+					<a href="{{url}}"target="_blank">My Current Location</a>
+				</p>
+			</div>
+		</li>
+	</script>
 	
 	<script src="/socket.io/socket.io.js" type="text/javascript"></script>
 	<script type="text/javascript" src="/js/libs/jquery-3.3.1.min.js"></script>
 	<script type="text/javascript" src="/js/libs/moment.js"></script>
+	<script type="text/javascript" src="/js/libs/mustache.js"></script>
 	<script src="/js/index.js" type="text/javascript"></script>
 </body>
 </html>
