--- a/public/index.html
+++ b/public/index.html
@@ -2,55 +2,28 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title></title>
+	<title>Join | ChatApp</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
-<body class='chat'>
-	<div class='chat__sidebar'>
-		<h3>Avinash Chat Room</h3>
-		<div id='users'></div>
+<body class="centered-form">
+	<div class="centered-form__form">
+		<form action="/chat.html">
+			<div class="form-field">
+				<h3>Join a Chat</h3>
+			</div>
+			<div class="form-field">
+				<label>Display Name</label>
+				<input type="text" name="name" autofocus />
+			</div>
+			<div class="form-field">
+				<label>Room name</label>
+				<input type="text" name="room" />
+			</div>
+			<div class="form-field">
+				<button>Join</button>
+			</div>
+		</form>
 	</div>
-	<div class='chat__main'>
-		<ol id="messages" class='chat__messages'></ol>
-		<p id='location'></p>
-
-		<div class='chat__footer'>
-			<form id="message-form">
-				<input type="text" name="message" placeholder="Message" autofocus autocomplete="off" />
-				<button>Send</button>
-			</form>
-			<button id="send-location">Send location</button>
-		</div>
-	</div>
-	<script type="text/template" id="message-template">
-		<li class='message'>
-			<div class='message__title'>
-				<h4>{{from}}</h4>
-				<span>{{createdAt}}</span>
-			</div>
-			<div class='message__body'>
-				<p>{{text}}</p>
-			</div>
-		</li>
-	</script>
-	<script type="text/template" id="location-message-template">
-		<li class='message'>
-			<div class='message__title'>
-				<h4>{{from}}</h4>
-				<span>{{createdAt}}</span>
-			</div>
-			<div class='message__body'>
-				<p>
-					<a href="{{url}}" target="_blank">My Current Location</a>
-				</p>
-			</div>
-		</li>
-	</script>
-	
-	<script src="/socket.io/socket.io.js" type="text/javascript"></script>
-	<script type="text/javascript" src="/js/libs/jquery-3.3.1.min.js"></script>
-	<script type="text/javascript" src="/js/libs/moment.js"></script>
-	<script type="text/javascript" src="/js/libs/mustache.js"></script>
-	<script src="/js/index.js" type="text/javascript"></script>
 </body>
 </html>
