Adding join room

--- a/public/chat.html
+++ b/public/chat.html
@@ -52,6 +52,7 @@
 	<script type="text/javascript" src="/js/libs/jquery-3.3.1.min.js"></script>
 	<script type="text/javascript" src="/js/libs/moment.js"></script>
 	<script type="text/javascript" src="/js/libs/mustache.js"></script>
+	<script type="text/javascript" src="/js/libs/deparam.js"></script>
 	<script src="/js/chat.js" type="text/javascript"></script>
 </body>
 </html>
